--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <div class="menu-item"><a href="index.html#publication">Publication</a></div>
 </td>
 <td id="layout-content">
-<p><br /> </p>
 <table class="imgtable"><tr><td>
 <img src="profile11.png" alt="alt text" width="170px" />&nbsp;</td>
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
@@ -177,6 +176,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://openreview.net/forum?id=MeHmwCDifc"><b>The Trickle-down Impact of Reward Inconsistency on RLHF.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Dong Yu. <br />   <font color="DarkRed">The Twelfth International Conference on Learning Representations</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2205.11603"><b>Representation Projection Invariance Mitigates Representation Collapse.</b></a>  <br />    Anastasia Razdaibiedina, Ashish Khetan, Zohar Karnin, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Vishaal Kapoor and Vivek Madan. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2023. <font size=-1></font></p>
 </li>
 </ul>
@@ -202,6 +205,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />   <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Self-Instruct: Aligning Language Model with Self Generated Instructions.</b>  <br />    Yizhong Wang, Yeganeh Kordi, Swaroop Mishra, Alisa Liu, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2212.10560</font>, 2022. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -394,7 +401,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-05 13:49:21 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-10 08:35:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
