--- a/index.html
+++ b/index.html
@@ -108,10 +108,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    Taiming Lu, Muhan Gao, Kuai Yu, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2406.14673</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2406.14673">[html]</a> <a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a> <a href="https://x.com/muhan_gao/status/1806737003259592974">[tweet]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2405.13274"><b>DiffNorm: Self-Supervised Normalization for Non-autoregressive Speech-to-speech Translation.</b></a>  <br />    <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2405.13274</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2405.13274">[html]</a> <a href="https://github.com/steventan0110/DiffNorm">[code]</a> <a href="https://x.com/weiting_nlp/status/1794421382841004055">[tweet]</a></font></p>
 </li>
 </ul>
@@ -128,7 +124,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, Andrew Wang, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2402.12370</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2402.12370">[html]</a> <a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a> <a href="https://x.com/andrewwnlp/status/1767234121355735294">[tweet]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    Taiming Lu, Muhan Gao, Kuai Yu, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2406.14673">[html]</a> <a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a> <a href="https://x.com/muhan_gao/status/1806737003259592974">[tweet]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, Andrew Wang, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2402.12370">[html]</a> <a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a> <a href="https://x.com/andrewwnlp/status/1767234121355735294">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -401,7 +401,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-18 11:56:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-20 07:02:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
