--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, Andrew Wang, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2402.12370">[html]</a> <a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a> <a href="https://x.com/andrewwnlp/status/1767234121355735294">[tweet]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2402.12370">[html]</a> <a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a> <a href="https://x.com/andrewwnlp/status/1767234121355735294">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -205,10 +205,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />   <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2206.04615">[html]</a> <a href="https://github.com/google/BIG-bench">[data]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Self-Instruct: Aligning Language Model with Self Generated Instructions.</b>  <br />    Yizhong Wang, Yeganeh Kordi, Swaroop Mishra, Alisa Liu, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2212.10560</font>, 2022. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -401,7 +397,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-20 07:02:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-20 17:48:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
