--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Refining Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2404.04298</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2404.04298">[html]</a> <a href="https://x.com/Dongwei__Jiang/status/1777708573256204761">[tweet]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2404.04298</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2404.04298">[html]</a> <a href="https://x.com/Dongwei__Jiang/status/1777708573256204761">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -397,7 +397,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-20 17:48:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-21 09:18:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
