--- a/index.html
+++ b/index.html
@@ -104,14 +104,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2406.20092"><b>LLaVolta: Efficient Multi-modal Models via Stage-wise Visual Context Compression.</b></a>  <br />    <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>, Luoxin Ye, Ju He, Zhao-Yang Wang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2406.20092</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2406.20092">[html]</a> <a href="https://github.com/Beckschen/LLaVolta">[code]</a> <a href="https://beckschen.github.io/llavolta.html">[project]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2405.13274"><b>DiffNorm: Self-Supervised Normalization for Non-autoregressive Speech-to-speech Translation.</b></a>  <br />    <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2405.13274</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2405.13274">[html]</a> <a href="https://github.com/steventan0110/DiffNorm">[code]</a> <a href="https://x.com/weiting_nlp/status/1794421382841004055">[tweet]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2404.04298</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2404.04298">[html]</a> <a href="https://x.com/Dongwei__Jiang/status/1777708573256204761">[tweet]</a></font></p>
 </li>
 </ul>
@@ -133,6 +125,14 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2024. <b>Spotlight presentation.</b> <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2403.12958">[html]</a> <a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a> <a href="https://github.com/nexync/dated_data/">[code]</a> <a href="https://x.com/jeff_cheng_77/status/1772355368649187669">[tweet]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2406.20092"><b>LLaVolta: Efficient Multi-modal Models via Stage-wise Visual Context Compression.</b></a>  <br />    <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>, Luoxin Ye, Ju He, Zhao-Yang Wang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2406.20092">[html]</a> <a href="https://github.com/Beckschen/LLaVolta">[code]</a> <a href="https://beckschen.github.io/llavolta.html">[project]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2405.13274"><b>DiffNorm: Self-Supervised Normalization for Non-autoregressive Speech-to-speech Translation.</b></a>  <br />    <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2405.13274">[html]</a> <a href="https://github.com/steventan0110/DiffNorm">[code]</a> <a href="https://x.com/weiting_nlp/status/1794421382841004055">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -397,7 +397,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-21 09:18:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-25 14:41:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
