--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.01044"><b>RATIONALYST: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2410.01044</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2410.01044">[html]</a> <a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a> <a href="">[tweet]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2410.01044"><b>RATIONALYST: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2410.01044</font>, 2024. <font size=-1><a href="https://ar5iv.labs.arxiv.org/html/2410.01044">[html]</a> <a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a> <a href="https://x.com/Dongwei__Jiang/status/1841845922130788529">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -401,7 +401,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-03 08:40:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-03 13:39:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
