--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </div></div>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
+<li><p>Oracle Labs ML seminar series, <a href="files/2024_oracle/2024-TAU.pdf">The Uphill Battle of Making Language Models Reliable</a>, 2024.</p>
+</li>
 <li><p>New York University, <a href="files/2023_nyu/2023-nyu2-slides.pdf">Large Language Models: Revisiting Few Mysteries</a>, 2023.</p>
 </li>
 <li><p>University of Maryland, <a href="files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
@@ -401,7 +403,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-07 16:03:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-09 22:10:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
