--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2410.04579"><b>Upsample or Upweight? Balanced Training on Heavily Imbalanced Datasets.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2410.04579</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2410.01044"><b>RATIONALYST: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2410.01044</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a></font></p>
 </li>
 </ul>
@@ -403,7 +407,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-09 22:10:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-10 11:20:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
