--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </div></div>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
-<li><p>Oracle Labs ML seminar series, <a href="files/2024_oracle/2024-TAU.pdf">The Uphill Battle of Making Language Models Reliable</a>, 2024.</p>
+<li><p>Oracle Labs ML seminar series, <a href="http://danielkhashabi.com/files/2024_oracle/2024-TAU.pdf">The Uphill Battle of Making Language Models Reliable</a>, 2024.</p>
 </li>
-<li><p>New York University, <a href="files/2023_nyu/2023-nyu2-slides.pdf">Large Language Models: Revisiting Few Mysteries</a>, 2023.</p>
+<li><p>New York University, <a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">Large Language Models: Revisiting Few Mysteries</a>, 2023.</p>
 </li>
-<li><p>University of Maryland, <a href="files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
+<li><p>University of Maryland, <a href="http://danielkhashabi.com/files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
 </li>
-<li><p>Johns Hopkins University CLSP, <a href="files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">The Quest Toward Generality in Natural Language Understanding</a>, 2022.</p>
+<li><p>Johns Hopkins University CLSP, <a href="http://danielkhashabi.com/files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">The Quest Toward Generality in Natural Language Understanding</a>, 2022.</p>
 </li>
-<li><p>Google AI, <a href="files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.
+<li><p>Google AI, <a href="http://danielkhashabi.com/files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.
 </p>
 </li>
-<li><p>Carnegie Mellon University, <a href="files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019.
+<li><p>Carnegie Mellon University, <a href="http://danielkhashabi.com/files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019.
 
 </p>
 </li>
@@ -407,7 +407,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-10 11:20:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-10 16:22:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
