--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
 <table class="imgtable"><tr><td>
 <img src="profile11.png" alt="alt text" width="170px" />&nbsp;</td>
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
-Assistant Professor <br />
-<a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a> <br />
-<a href="https://ai.jhu.edu/">Data Science and AI Institute</a> <br />
-<a href="https://www.cs.jhu.edu/">Department of Computer Science</a> <br />
-<a href="https://engineering.jhu.edu/">Whiting School of Engineering</a> <br />
-<a href="https://jhu.edu/">Johns Hopkins University</a> <br /><br />
-Office: Hackerman Hall 316B | Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br /></p>
+Assistant Professor,  <a href="https://www.cs.jhu.edu/">Department of Computer Science</a>,
+<a href="https://jhu.edu/">Johns Hopkins University</a> <br />
+Office: Hackerman Hall 316B <br />
+Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br />
+Other affiliations:</p>
+<ul>
+<li><p><a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a>, Member</p>
+</li>
+<li><p><a href="https://ai.jhu.edu/">Data Science and AI Institute</a>, Member</p>
+</li>
+<li><p><a href="https://iaa.jhu.edu/">Institute for Assured Autonomy</a>, Affiliate</p>
+</li>
+</ul>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
 <p>My research is motivated by understanding the computational foundations of <i>intelligent behavior</i>, often through the lens of <i>natural language</i>.
@@ -407,7 +413,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-10 16:22:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-13 13:17:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
