--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 Assistant Professor,  <a href="https://www.cs.jhu.edu/">Department of Computer Science</a>,
 <a href="https://jhu.edu/">Johns Hopkins University</a> <br />
 Office: Hackerman Hall 316B <br />
-Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br />
+Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br /></p>
+<p><p style="margin-bottom:0.1cm;"></p>
 Other affiliations:</p>
 <ul>
 <li><p><a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a>, Member</p>
@@ -413,7 +414,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-13 13:17:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-13 13:22:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
