--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯
 <p><p style="margin-bottom:0.1cm;"></p>
 Other affiliations:</p>
 <ul>
-<li><p><a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a>, Member</p>
+<li><p>Member, <a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a></p>
 </li>
-<li><p><a href="https://ai.jhu.edu/">Data Science and AI Institute</a>, Member</p>
+<li><p>Member, <a href="https://ai.jhu.edu/">Data Science and AI Institute</a></p>
 </li>
-<li><p><a href="https://iaa.jhu.edu/">Institute for Assured Autonomy</a>, Affiliate</p>
+<li><p>Affiliate, <a href="https://iaa.jhu.edu/">Institute for Assured Autonomy</a></p>
 </li>
 </ul>
 </td></tr></table>
@@ -418,7 +418,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-13 22:21:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-22 21:13:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
