--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 Assistant Professor,  <a href="https://www.cs.jhu.edu/">Department of Computer Science</a>,
 <a href="https://jhu.edu/">Johns Hopkins University</a> <br />
 Office: Hackerman Hall 316B <br />
-Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br /></p>
+Email: <tt>danielk<img src="files/abababa.png" width="20" height="20" style="margin-bottom: -5px;">jhu.edu</tt> <br /></p>
 <p><p style="margin-bottom:0.1cm;"></p>
 Other affiliations:</p>
 <ul>
@@ -418,7 +418,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-22 21:13:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-24 19:25:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
