--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://danielkhashabi.com/files/2024_analobench/EMNLP_2024_Analogies_Poster.pdf">[poster]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -418,7 +418,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-26 20:48:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-04 14:39:03 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
