--- a/index.html
+++ b/index.html
@@ -73,25 +73,53 @@ What forms of interaction are most effective and meaningful for humans? How can 
 <div class="blockcontent">
 <p><i>If you are an undergraduate or masters student and would like to work on research with my group, please fill out <a href="https://forms.gle/6AZg34JVkkZZieySA">this form</a>.</i></p>
 </div></div>
-<p><h2 id="talks">Select Talks</h2></p>
+<p><h2 id="talks">Recent Talks</h2></p>
 <ul>
-<li><p>Oracle Labs ML seminar series, <a href="http://danielkhashabi.com/files/2024_oracle/2024-TAU.pdf">The Uphill Battle of Making Language Models Reliable</a>, 2024.</p>
+<li><p>2024, Oracle Labs ML seminar series (<a href="http://danielkhashabi.com/files/2024_oracle/2024-oracle.pdf">slides</a>)</p>
 </li>
-<li><p>New York University, <a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">Large Language Models: Revisiting Few Mysteries</a>, 2023.</p>
+<li><p>2024, Tel Aviv NLP seminar series (<a href="http://danielkhashabi.com/files/2024_oracle/2024-TAU.pdf">slides</a>)</p>
 </li>
-<li><p>University of Maryland, <a href="http://danielkhashabi.com/files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
+<li><p>2024, Forum on Engineered AI Systems (<a href="http://danielkhashabi.com/files/2024_NAE/2024-Khashabi_NAE.pdf">slides</a>)</p>
 </li>
-<li><p>Johns Hopkins University CLSP, <a href="http://danielkhashabi.com/files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">The Quest Toward Generality in Natural Language Understanding</a>, 2022.</p>
+<li><p>2024, Keynote at Engineering for Professionals Quarterly Meeting (<a href="http://danielkhashabi.com/files/2024_ep_conference/2024-EP-self-improve.pdf">slides</a>)</p>
 </li>
-<li><p>Google AI, <a href="http://danielkhashabi.com/files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.
-</p>
+<li><p>2024, Workshop on LLMs for Healthy Aging (<a href="http://danielkhashabi.com/files/2023_aitc/2023-jhu-aitc.pdf">slides</a>)</p>
 </li>
-<li><p>Carnegie Mellon University, <a href="http://danielkhashabi.com/files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019.
-
-</p>
+<li><p>2023, NYU Text-as-Data talk series (<a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">slides</a>)</p>
 </li>
-<li><p>Mid-Atlantic Student Colloquium on Speech, Language and Learning, <a href="https://docs.google.com/presentation/d/1KmGQfbeUitZOum4s6cPTqwuJJfTdxlQMeV_Go2_8Jz0/edit?usp=sharing">Abductive Reasoning on Natural Language Questions as
-Global Reasoning over Semantic Abstractions</a>, 2018.</p>
+<li><p>2023, JHU Seminars for Center for Language and Speech Technologies (<a href="http://danielkhashabi.com/files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">slides</a>)</p>
+</li>
+<li><p>2023, JHU Electrical Engineering seminars (<a href="">slides</a>)</p>
+</li>
+<li><p>2023, Amazon, &lsquo;&lsquo;Human in the Loop&rsquo;&rsquo; summer seminar (<a href="">slides</a>)</p>
+</li>
+<li><p>2023, Johns Hopkins Center for Health Security (<a href="">slides</a>)</p>
+</li>
+<li><p>2023, UMD Computational Linguistics seminar (<a href="http://danielkhashabi.com/files/2023_umd_talk/umd-talk-2023-split.pdf">slides</a>)</p>
+</li>
+<li><p>2023, Applied Physics Lab, Intelligent Systems Center seminars (<a href="">slides</a>)</p>
+</li>
+<li><p>2022, University of Tehran, NLP seminar (<a href="">slides</a>)</p>
+</li>
+<li><p>2021, University of Glasgow, IR seminar, (<a href="">slides</a>)</p>
+</li>
+<li><p>2021, Google AI (<a href="http://danielkhashabi.com/files/2021_google_talk/google-talk-march-2021.pdf">slides</a>)</p>
+</li>
+<li><p>2021, UCLA, Big Data and ML seminar(<a href="">slides</a>)</p>
+</li>
+<li><p>2021, USC, NLP seminar (<a href="">slides</a>)</p>
+</li>
+<li><p>2020, Tel Aviv University NLP seminar (<a href="">slides</a>)</p>
+</li>
+<li><p>2019, <a href="https://freuder.wordpress.com/pthg-19-the-third-workshop-on-progress-towards-the-holy-grail/The">Workshop on Progress Towards the Holy Grail</a>, Conference on Constraint Programming (CP), 2019. (<a href="http://danielkhashabi.com/files/2019_talk_holy_grail_workshop/daniel-kh-holy-grail-workshop-2019.pdf">slides</a>)</p>
+</li>
+<li><p>2019, CMU LTI seminar (<a href="http://danielkhashabi.com/files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">slides</a>)</p>
+</li>
+<li><p>2018, NYU NLP seminar <a href="https://docs.google.com/presentation/d/1KZxE0_LANeRYaShGP2cjvbRTaR2V7F8N36xQ8004r2o/edit?usp=sharing">Reasoning-Driven Question Answering</a>.</p>
+</li>
+<li><p>2018, Stanford NLP seminar  (<a href="https://docs.google.com/presentation/d/11QnDUYXB9q06HIyZxmHcb1BrwcdStjjHPNOC3AnlTsc/edit?usp=sharing">slides</a>)</p>
+</li>
+<li><p>2018, Mid-Atlantic Student Colloquium on Speech, Language and Learning (<a href="https://docs.google.com/presentation/d/1KmGQfbeUitZOum4s6cPTqwuJJfTdxlQMeV_Go2_8Jz0/edit?usp=sharing">slides</a>)</p>
 </li>
 </ul>
 <p><h2 id="teaching">Teaching</h2></p>
@@ -153,7 +181,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2024. <b>Outstanding paper award.</b> <font size=-1><a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a> <a href="https://github.com/nexync/dated_data/">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2024. <b>Outstanding paper award.</b> <font size=-1><a href="https://danielkhashabi.com/files/2024_cuttoff/2024_COLM_DatedData.pdf">[slides]</a> <a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a> <a href="https://github.com/nexync/dated_data/">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -418,7 +446,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-04 14:39:03 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-05 17:56:10 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
