--- a/index.html
+++ b/index.html
@@ -75,41 +75,43 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
-<li><p>2024, Oracle Labs ML seminar series (<a href="http://danielkhashabi.com/files/2024_oracle/2024-oracle.pdf">slides</a>)</p>
+<li><p>2024, Oracle Labs ML seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-oracle.pdf">slides</a>)</p>
 </li>
-<li><p>2024, Tel Aviv NLP seminar series (<a href="http://danielkhashabi.com/files/2024_oracle/2024-TAU.pdf">slides</a>)</p>
+<li><p>2024, Tel Aviv NLP seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-TAU.pdf">slides</a>)</p>
 </li>
-<li><p>2024, Forum on Engineered AI Systems (<a href="http://danielkhashabi.com/files/2024_NAE/2024-Khashabi_NAE.pdf">slides</a>)</p>
+<li><p>2024, Forum on &lsquo;&lsquo;Engineered AI Systems&rsquo;&rsquo; (<a href="http://danielkhashabi.com/files/2024_NAE/2024-Khashabi_NAE.pdf">slides</a>)</p>
 </li>
-<li><p>2024, Keynote at Engineering for Professionals Quarterly Meeting (<a href="http://danielkhashabi.com/files/2024_ep_conference/2024-EP-self-improve.pdf">slides</a>)</p>
+<li><p>2024, Keynote at &lsquo;&lsquo;Engineering for Professionals&rsquo;&rsquo; quarterly meeting (<a href="http://danielkhashabi.com/files/2024_ep_conference/2024-EP-self-improve.pdf">slides</a>)</p>
 </li>
-<li><p>2024, Workshop on LLMs for Healthy Aging (<a href="http://danielkhashabi.com/files/2023_aitc/2023-jhu-aitc.pdf">slides</a>)</p>
+<li><p>2024, Workshop on &lsquo;&lsquo;LLMs for Healthy Aging&rsquo;&rsquo; (<a href="http://danielkhashabi.com/files/2023_aitc/2023-jhu-aitc.pdf">slides</a>)</p>
 </li>
-<li><p>2023, NYU Text-as-Data talk series (<a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">slides</a>)</p>
+<li><p>2023, NYU's &lsquo;&lsquo;Text-as-Data&rsquo;&rsquo; talk series (<a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">slides</a>)</p>
 </li>
-<li><p>2023, JHU Seminars for Center for Language and Speech Technologies (<a href="http://danielkhashabi.com/files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">slides</a>)</p>
+<li><p>2023, JHU's Center for Language and Speech Technologies seminar (<a href="https://www.youtube.com/watch?v=YuxmtgBk-Ls">video</a>)</p>
 </li>
-<li><p>2023, JHU Electrical Engineering seminars (<a href="">slides</a>)</p>
+<li><p>2023, JHU's Electrical Engineering department seminars (<a href="http://danielkhashabi.com/files/2023_ece_talk/2023-ece-jhu.pdf">slides</a>)</p>
 </li>
-<li><p>2023, Amazon, &lsquo;&lsquo;Human in the Loop&rsquo;&rsquo; summer seminar (<a href="">slides</a>)</p>
+<li><p>2023, Amazon &lsquo;&lsquo;Human in the Loop&rsquo;&rsquo; seminar</p>
 </li>
-<li><p>2023, Johns Hopkins Center for Health Security (<a href="">slides</a>)</p>
+<li><p>2023, JHU's Center for Health Security seminars (<a href="http://danielkhashabi.com/files/2023_public_health/2023-jhu-public-health-split.pdf">slides</a>)</p>
 </li>
 <li><p>2023, UMD Computational Linguistics seminar (<a href="http://danielkhashabi.com/files/2023_umd_talk/umd-talk-2023-split.pdf">slides</a>)</p>
 </li>
-<li><p>2023, Applied Physics Lab, Intelligent Systems Center seminars (<a href="">slides</a>)</p>
+<li><p>2023, Applied Physics Lab, Intelligent Systems Center seminars</p>
 </li>
-<li><p>2022, University of Tehran, NLP seminar (<a href="">slides</a>)</p>
+<li><p>2022, University of Tehran NLP seminar</p>
 </li>
-<li><p>2021, University of Glasgow, IR seminar, (<a href="">slides</a>)</p>
+<li><p>2021, University of Glasgow IR seminar (<a href="http://danielkhashabi.com/files/2021_glasgow/glasgow-talk-appril-2021.pptx">slides</a>)</p>
+</li>
+<li><p>2021, Johns Hopkins University (<a href="http://danielkhashabi.com/files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">slides</a>)</p>
 </li>
 <li><p>2021, Google AI (<a href="http://danielkhashabi.com/files/2021_google_talk/google-talk-march-2021.pdf">slides</a>)</p>
 </li>
-<li><p>2021, UCLA, Big Data and ML seminar(<a href="">slides</a>)</p>
+<li><p>2021, UCLA Big Data and ML seminar (<a href="http://danielkhashabi.com/files/2021_ucla_talk/ucla-talk-march-2021.pptx">slides</a>)</p>
 </li>
-<li><p>2021, USC, NLP seminar (<a href="">slides</a>)</p>
+<li><p>2021, USC NLP seminar (<a href="http://danielkhashabi.com/files/2021_usc/usc:isi-talk-march-2021.pptx">slides</a>)</p>
 </li>
-<li><p>2020, Tel Aviv University NLP seminar (<a href="">slides</a>)</p>
+<li><p>2020, Tel Aviv University NLP seminar (<a href="http://danielkhashabi.com/files/2020_unifiedqa/unifiedqa_tau_talk_split.pdf">slides</a>)</p>
 </li>
 <li><p>2019, <a href="https://freuder.wordpress.com/pthg-19-the-third-workshop-on-progress-towards-the-holy-grail/The">Workshop on Progress Towards the Holy Grail</a>, Conference on Constraint Programming (CP), 2019. (<a href="http://danielkhashabi.com/files/2019_talk_holy_grail_workshop/daniel-kh-holy-grail-workshop-2019.pdf">slides</a>)</p>
 </li>
@@ -446,7 +448,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-05 17:56:10 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-05 21:53:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
